--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8080
 springdoc.swagger-ui.path=/swagger-ui
+logging.level.root=WARN
+logging.level.com.example=WARN
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
